Use New Reflection Based Class Construction (#486)
This will stop our use of reflection from bypassing the checked exception system and exceptions in the reflected class constructors should now be properly surfaced to the user.